Pdf's of notebooks

--- a/notebooks/Pre_processing.Rmd
+++ b/notebooks/Pre_processing.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Pre-processing measures"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 # Imports
