--- a/notebooks/post_processing.Rmd
+++ b/notebooks/post_processing.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Post-processing measures"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 # Imports
 ```{r}
