--- a/notebooks/dataset_description.Rmd
+++ b/notebooks/dataset_description.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Dataset Description"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 # Imports
