--- a/notebooks/Pre_processing.Rmd
+++ b/notebooks/Pre_processing.Rmd
@@ -20,6 +20,9 @@ source("../scripts/metrics_on_dataset.R")
 ```{r}
 df <- read_rds("../data/selection.rds") %>%
   select(-rating, -gender)
+
+df_test <- read_rds("../data/selection_test.rds") %>%
+  select(-rating, -gender)
 ```
 
 # Massaging
@@ -29,17 +32,20 @@ nB_df <- df %>%
   mutate(accepted = as.factor(accepted),
          index = 1:1000)
 fitted_Bayes_model <- naive_Bayes() %>%
-  fit(accepted ~ nationality + test_score + english_cert + extracurricular, nB_df)
-nB_predictions <- predict(fitted_Bayes_model, nB_df, type="prob")
+  fit(accepted ~ nationality + test_score + english_cert +
+        extracurricular,
+      nB_df)
+nB_predictions <- predict(fitted_Bayes_model, nB_df, type = "prob")
 nB_df <- nB_df %>%
   mutate(prob_FALSE = nB_predictions[[".pred_FALSE"]],
          prob_TRUE = nB_predictions[[".pred_TRUE"]])
-prob_true = sum(nB_df$accepted == "TRUE")/nrow(nB_df)
-non_dutch_acceptance = nrow(filter(nB_df, accepted == "TRUE", nationality == "Non_Dutch")) /
+prob_true = sum(nB_df$accepted == "TRUE") / nrow(nB_df)
+non_dutch_acceptance = nrow(
+  filter(nB_df, accepted == "TRUE", nationality == "Non_Dutch")) /
   nrow(filter(nB_df, nationality == "Non_Dutch"))
 print(non_dutch_acceptance)
 
-while(non_dutch_acceptance < round(prob_true, 3)) {
+while (non_dutch_acceptance < round(prob_true, 3)) {
   # Flip highest Non-Dutch
   highest_non_dutch <- nB_df %>%
     filter(accepted == "FALSE", nationality == "Non_Dutch") %>%
@@ -57,45 +63,49 @@ while(non_dutch_acceptance < round(prob_true, 3)) {
     as.integer()
   
   nB_df <- nB_df %>%
-    mutate(accepted = replace(accepted, index == highest_non_dutch, "TRUE"),
-           accepted = replace(accepted, index == lowest_dutch, "FALSE"))
+    mutate(
+      accepted = replace(accepted, index == highest_non_dutch, "TRUE"),
+      accepted = replace(accepted, index == lowest_dutch, "FALSE")
+    )
   
-  non_dutch_acceptance = nrow(filter(nB_df, accepted == "TRUE", nationality == "Non_Dutch")) /
+  non_dutch_acceptance = nrow(filter(
+    nB_df, accepted == "TRUE", nationality == "Non_Dutch")) /
     nrow(filter(nB_df, nationality == "Non_Dutch"))
   # print(non_dutch_acceptance)
 }
 nB_df <- nB_df %>%
-  select(-index, -prob_FALSE, -prob_TRUE)
+  select(-index,-prob_FALSE,-prob_TRUE)
 
 model <- decision_tree(mode = "classification")
-massaging_results <- all_metrics(nB_df, model, df)
+massaging_results <- all_metrics(nB_df, model, df_test)
 print_all_metrics("Massaging", massaging_results)
 ```
 # Reweighting
 
 ```{r}
 weights <- reweight(df$nationality, as.numeric(df$accepted))
-weighted_model <- rpart(accepted ~ nationality + test_score + english_cert + extracurricular,
-      df, weights)
-weighted_df <- df %>%
-  mutate(predicted = as.logical(predict(weighted_model, df)))
+weighted_model <- rpart(accepted ~ nationality + test_score + english_cert + 
+                          extracurricular, df, weights)
+weighted_df <- df_test %>%
+  mutate(predicted = as.logical(predict(weighted_model, df_test)))
 print("Reweighting")
 print("Group fairness")
 print(group_fairness(weighted_df, nationality, predicted)[[1]])
 print("Causal Discrimination")
 pop_size <- nrow(df)
 # Flip nationalities
-inverted_df <- df %>% 
+inverted_df <- df_test %>% 
   mutate(nationality = ifelse(nationality == "Dutch", "Non_Dutch", "Dutch"))
 # Add prediction column
-eval_df <- df %>%
+eval_df <- df_test %>%
   mutate(inverted_accepted = as.logical(predict(weighted_model, inverted_df)),
          different = accepted != inverted_accepted)
 print(sum(eval_df$different)/pop_size)
 print("Unawareness")
-weighted_unaware_model <- rpart(accepted ~ test_score + english_cert + extracurricular, df, weights)
-weighted_unaware_df <- df %>%
-  mutate(predicted = as.logical(predict(weighted_unaware_model, df)))
+weighted_unaware_model <- rpart(accepted ~ test_score + english_cert + 
+                                  extracurricular, df, weights)
+weighted_unaware_df <- df_test %>%
+  mutate(predicted = as.logical(predict(weighted_unaware_model, df_test)))
 print(group_fairness(weighted_unaware_df, nationality, predicted)[[1]])
 ```
 
@@ -105,6 +115,6 @@ print(group_fairness(weighted_unaware_df, nationality, predicted)[[1]])
 resample_indexes <- resample(df$nationality, as.numeric(df$accepted))
 resampled_df <- df[resample_indexes, ]
 model <- decision_tree(mode = "classification")
-resamping_results <- all_metrics(resampled_df, model, df)
+resamping_results <- all_metrics(resampled_df, model, df_test)
 print_all_metrics("Resampling", resamping_results)
 ```
